fix(combobox): Truncate long strings correctly. #2096

--- a/src/components/calcite-combobox-item/calcite-combobox-item.scss
+++ b/src/components/calcite-combobox-item/calcite-combobox-item.scss
@@ -83,6 +83,7 @@ ul {
 }
 
 .title {
+  @apply truncate;
   padding: 0 var(--calcite-combobox-item-spacing-unit-s);
 }
 
