--- a/src/components/calcite-chip/calcite-chip.scss
+++ b/src/components/calcite-chip/calcite-chip.scss
@@ -49,7 +49,11 @@
 }
 
 .container {
-  @apply inline-flex items-center h-full;
+  @apply inline-flex items-center h-full max-w-full;
+}
+
+.title {
+  @apply truncate;
 }
 
 .calcite--rtl {
@@ -88,7 +92,7 @@
     items-center
     border-none
     cursor-pointer
-    transition-default    
+    transition-default
     text-color-1;
   -webkit-appearance: none;
   border-radius: var(--calcite-chip-button-border-radius);
